# usd_fluid_domain

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
cmake/: FindOpenVDB.cmake  FindUSD.cmake
include/: CMakeLists.txt
include/ufd/: CMakeLists.txt  DomainBuilder.h  DomainConfig.h  DomainGenerator.h  EmitterBuilder.h  EnvelopeBuilder.h  StageComposer.h  StageReader.h  SurfaceExtractor.h
src/: CMakeLists.txt  DomainBuilder.cpp  DomainConfig.cpp  DomainConfig.h  DomainGenerator.cpp  DomainGenerator.h  EmitterBuilder.cpp  EnvelopeBuilder.cpp  StageComposer.cpp  StageReader.cpp  StageReader.h  SurfaceExtractor.cpp  SurfaceExtractor.h  main.cpp
tests/: CMakeLists.txt  test_DomainGenerator.cpp  test_StageReader.cpp  test_SurfaceExtractor.cpp
tests/resources/: box.FCStd  box.usda  box_x2_disjoint.FCStd  box_x2_disjoint.usda  box_x2_intersected.FCStd  box_x2_intersected.usda
tests/src/: CMakeLists.txt  test_DomainBuilder.cpp  test_DomainGenerator.cpp  test_EmitterBuilder.cpp  test_EnvelopeBuilder.cpp  test_StageComposer.cpp  test_StageReader.cpp  test_SurfaceExtractor.cpp
